--- a/src/sass/structure/hero/_herobase.scss
+++ b/src/sass/structure/hero/_herobase.scss
@@ -7,13 +7,13 @@
     transition: none;
     z-index: 10;
     width: 100%;
-    
-    margin: 20px auto;
+    margin: 0 auto; 
     padding-top: 0;
     
 
     @media (min-width: $screen-sm) {
 	padding-bottom: 10px;
+	 margin: 20px auto;
     }
 
     @include placeholder(#fff);	
