--- a/src/sass/structure/navigation/_menu.scss
+++ b/src/sass/structure/navigation/_menu.scss
@@ -355,7 +355,7 @@
 #mainnav-toggle {
 	position: absolute;
 	right: 5px;
-	top: 0;
+	top: 5px;
 	@include px2rem($font-size-mobile-meta);
 	background-color: transparent;
 	border: none;
@@ -579,11 +579,11 @@
 #menu-backdrop {
 	display: none;
 	position: fixed;
-	top: 0;
+	top: 50px;
 	left: 0;
 	right: 0;
 	bottom: 0;
 	background-color: rgba(0, 51, 102, .7);
-	z-index: 10;
+	z-index: 1;
 }
 
