div anpassungen an mobile darstellung - mit und ohne logo - backdrops - mit und ohne wpadminbar

--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -268,6 +268,8 @@ $font-size-pagination-links: $font-size-content-meta;
 
 
 $font-size-mobile-meta: 24;
+$font-size-mobile-sitetitle: 16;
+$font-size-mobile-sitetitlelineheight: 19;
 
 
 $font-size-print-base: 11;
