--- a/src/sass/structure/navigation/_menu.scss
+++ b/src/sass/structure/navigation/_menu.scss
@@ -556,7 +556,7 @@
 			z-index: 30;
 			left: 0;
 			right: 0;
-			top: 130px;
+	 		top: 172px;
 			@include box-shadow(0 10px 10px rgba(0, 0, 0, 0.3));
 		}
 	}
@@ -585,5 +585,12 @@
 	bottom: 0;
 	background-color: rgba(0, 51, 102, .7);
 	z-index: 1;
+	
+	
+	.admin-bar & {
+	    top: 50 + $wordpress-adminbar-bigheight;
+	    @media (min-width: $screen-sm) and (min-width: $wordpress-adminbar-break) {
+		top: 50 + $wordpress-adminbar-smallheight;
+	    }
+	}
 }
-
