--- a/src/sass/structure/navigation/_metanav.scss
+++ b/src/sass/structure/navigation/_metanav.scss
@@ -101,9 +101,15 @@
 
 .orgalist {
 	display: block;
-	margin: 0 auto;
-	text-align: center;
-
+	
+	text-align: left;
+	margin-left: 40px;
+	
+	@media (min-width: $screen-sm) {
+	    margin: 0 auto;
+	    text-align: center;
+	}
+	
 	li.fauhome {
 		padding-right: 5px;
 		margin-right: 10px;
@@ -136,10 +142,6 @@
 		@include transition(background, 0.1s);
 	}
 	
-	.md-showsitelogo & {
-	    text-align: right;
-	    margin-right: 30px;
-	}
 	
 	
 	@media (max-width: $screen-sm - 1) {
@@ -150,6 +152,8 @@
 		li.facultyhome {
 			display: none;
 		}
+		
+		
 	}
 
 	@media (min-width: $screen-sm) {
