fixes zur anpassung der headerdarstellung mit und ohne grafiken und im fallk von besonders langen titeln sowie fixes in css code

--- a/src/sass/plugins/_rrze-calendar.scss
+++ b/src/sass/plugins/_rrze-calendar.scss
@@ -180,7 +180,7 @@
 
 
 
-@media (max-width: $screen-sm -1) {
+@media (max-width: $screen-sm - 1) {
 	#content .widget_event_widget .event-info {
 		margin-left: 60px;
 	}
