--- a/src/sass/plugins/_rrze-elements.scss
+++ b/src/sass/plugins/_rrze-elements.scss
@@ -219,7 +219,7 @@ button.expand-all {
     }
 }
 
-@media (max-width: $screen-sm -1) {
+@media (max-width: $screen-sm - 1) {
     .accordion-group {
         margin-left: 15px;
         margin-right: 15px;
