--- a/src/sass/structure/content/_event-items.scss
+++ b/src/sass/structure/content/_event-items.scss
@@ -34,7 +34,7 @@
 }
 
 
-@media (max-width: $screen-sm -1) {
+@media (max-width: $screen-sm - 1) {
 	.topevent-date,
 	.topevent-description {
 		margin-left: 15px;
