--- a/src/sass/elements/_forms.scss
+++ b/src/sass/elements/_forms.scss
@@ -68,6 +68,10 @@ form {
 	#content &.noborder {
 	    border: none;
 	}
+	#content .content-inline.with-sidebar & {
+	    display: block;
+	    border: none; 
+	}
 }
 
 label {
