--- a/src/sass/structure/footer/_social-media.scss
+++ b/src/sass/structure/footer/_social-media.scss
@@ -9,12 +9,16 @@
 	    
 	.textwidget, 
 	p, 
+	h3#socialmediatitle,
+	div h3:first-child,
 	h2  {
 		color: $colorSocial;
 		padding-top: 0;
 	}
-	
-	h2 {
+	h2, 
+	h3#socialmediatitle,
+	div h3:first-child,
+	p.headline {
 	    @include px2rem($font-size-h2-socialmedia);
 	    padding: 0;
 	    min-height: 50px;
