--- a/src/sass/structure/navigation/_subnav.scss
+++ b/src/sass/structure/navigation/_subnav.scss
@@ -2,7 +2,15 @@
 /* Subnav in content
 /*-----------------------------------------------------------------------------------*/
 
-
+.sidebar-subnav {
+    header {
+	padding: 11px 15px;
+	margin-top: 0px;
+	border-top: 1px solid $colorLightest;
+	@include px2rem($font-size-h3);
+	font-weight: bold;
+    }
+} 
 #subnav {
 	@include no-list;
 	
