Fix Mobile Layout Social Media Bar with Admin Bar

--- a/src/sass/structure/content/_global.scss
+++ b/src/sass/structure/content/_global.scss
@@ -46,9 +46,10 @@
     }
     .admin-bar & {
 	top: $wordpress-adminbar-bigheight;
-	
+	margin-bottom: $wordpress-adminbar-bigheight + 10px;
 	@media (min-width: $screen-md) and (min-width: $wordpress-adminbar-break) {
 	   top: $wordpress-adminbar-smallheight;
+	   margin-bottom: $wordpress-adminbar-smallheight + 10px;
 	} 
     }
 }
