bugfix template mit bühne - margins

--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -308,6 +308,9 @@ $screen-xl: 1760px;
 $screen-xxl: 3200px;
 $screen-xxs: 320px;
 
+$slider-maxwidth: 1260px;
+$slider-maxheight: 350px;
+
 $wordpress-adminbar-break: 783px;
 // WordPress Adminbar breaks to small
 $wordpress-adminbar-smallheight: 32px;
