--- a/src/sass/structure/hero/_herobase.scss
+++ b/src/sass/structure/hero/_herobase.scss
@@ -12,8 +12,8 @@
     
 
     @media (min-width: $screen-sm) {
-	padding-bottom: 10px;
-	 margin: 20px auto;
+	// padding-bottom: 10px;
+	margin: 20px auto;
     }
 
     @include placeholder(#fff);	
