--- a/src/sass/structure/hero/_linkregion.scss
+++ b/src/sass/structure/hero/_linkregion.scss
@@ -160,10 +160,10 @@
 	@media (min-width: $screen-sm) {
 	    display: block;
 	    margin-top: 20px;
+	    margin-bottom: 10px;
 	}
 	@media (min-width: $screen-md) {
-	    display: block;
-	    margin-top: 10px;
+	    margin-top: 30px;
 	}
 }
 
