--- a/src/sass/plugins/_plugins.scss
+++ b/src/sass/plugins/_plugins.scss
@@ -38,6 +38,9 @@
 // FAU Oembed
 @import "fau-oembed";
 
+// ILI Templates
+@import "ili-fau-templates";
+
 
 // Social Share 
 // (not used yet)  @import "social-share";
