fix overlay bei rrze-search plugin

--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -334,3 +334,6 @@ $max-width-hero: 1920px;
 $fau-gutter-width: 30px;
 
 $grid-gutter-width: $fau-gutter-width;
+
+
+$searchbackdrop-offset-top: 195px;
