--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 /*!
 Theme Name: FAU-Einrichtungen
-Version: 1.12.33-1
+Version: 1.12.33-2
 Requires at least: 5.0
 Tested up to: 5.6
 Requires PHP: 7.3
@@ -5252,7 +5252,11 @@ body.embedded {
       text-align: center; } }
   .orgalist li.fauhome {
     padding-right: 5px;
-    margin-right: 10px; }
+    margin-right: 10px;
+    margin-left: 22px; }
+    @media (min-width: 768px) {
+      .orgalist li.fauhome {
+        margin-left: 0; } }
   .orgalist li.fauhome:before {
     margin-left: 5px;
     margin-right: 5px; }
