--- a/css/fau-theme-editor-style.css
+++ b/css/fau-theme-editor-style.css
@@ -4856,3 +4856,15 @@ p.has-drop-cap:not(:focus):first-letter {
   margin: 0 .1em 0 0;
   text-transform: uppercase;
   font-style: normal; }
+
+/*
+To change this license header, choose License Headers in Project Properties.
+To change this template file, choose Tools | Templates
+and open the template in the editor.
+*/
+/*
+    Created on : 29.01.2021, 16:54:27
+    Author     : unrz59
+*/
+svg.origin {
+  display: none; }
