--- a/src/sass/fau-theme-admin.scss
+++ b/src/sass/fau-theme-admin.scss
@@ -4,7 +4,7 @@
 
 // jQuery UI fuer das Backend
 
-@import "frameworks/jquery-ui";
+// @import "frameworks/jquery-ui";
 
 // Import FAU variables
 @import "variables";
