svglib in footer

--- a/css/fau-theme-editor-style.css
+++ b/css/fau-theme-editor-style.css
@@ -4866,5 +4866,5 @@ and open the template in the editor.
     Created on : 29.01.2021, 16:54:27
     Author     : unrz59
 */
-svg.origin {
+svg.fau-svg-definitions {
   display: none; }
