--- a/src/sass/elements/_svglibicons.scss
+++ b/src/sass/elements/_svglibicons.scss
@@ -1,11 +1,6 @@
 /*
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
-*/
-/*
-    Created on : 29.01.2021, 16:54:27
-    Author     : unrz59
+Global definitions for meaningful svg images, that are loaded into the html code 
+and not as css-background-images.
 */
 
 svg {
