--- a/src/sass/structure/hero/_banner.scss
+++ b/src/sass/structure/hero/_banner.scss
@@ -3,9 +3,12 @@
 /*-----------------------------------------------------------------------------------*/
 
 #hero.hero-banner {
-	    @include radial-gradient-image($colorPrimaryHero, $colorPrimaryHeroLight, url($siegelurl) no-repeat left 95% bottom);
+	   // @include radial-gradient-image($colorPrimaryHero, $colorPrimaryHeroLight, url($siegelurl) no-repeat left 95% bottom);
 	    height: auto;
-	    
+	    overflow: inherit;
+            
+            @include radial-gradient($colorPrimaryHero, $colorPrimaryHeroLight);
+            
 	    @media (min-width: $screen-sm) {
 		 max-height: 142px;
 	    }
