FAU-Logo als SVG im Meta

--- a/src/sass/structure/hero/_slider.scss
+++ b/src/sass/structure/hero/_slider.scss
@@ -3,6 +3,7 @@
 /*-----------------------------------------------------------------------------------*/
 #hero.sliderpage {	
     margin-bottom: 0;	  
+    overflow: inherit;
 }
 
 #hero-slides {
