fix metanav im footer

--- a/src/sass/structure/hero/_linkregion.scss
+++ b/src/sass/structure/hero/_linkregion.scss
@@ -160,9 +160,11 @@
     
 	@media (min-width: $screen-sm) {
 	    display: block;
+	    position: relative;
 	    margin-top: 20px;
-	    margin-bottom: 10px;
-             z-index: 10;
+	    padding-bottom: 10px;
+            z-index: 10;
+	    overflow: hidden;
 	}
 	@media (min-width: $screen-md) {
 	    margin-top: 30px;
