--- a/src/sass/structure/footer/_pagefooter.scss
+++ b/src/sass/structure/footer/_pagefooter.scss
@@ -64,7 +64,16 @@
 		  color:  #fff;
 	    }
 	}
+
+
+	.footer-meta {
+	   text-align: left;
+	   @media (min-width: $screen-sm) {
+	       text-align: right;
+	   }
+       }
 }
+
 
 
 .footer-logo {
@@ -117,6 +126,7 @@
     }
 }
 
+
 @media (min-width: $screen-xs) {
  #footer {
 	li {
@@ -145,7 +155,6 @@
     .footer-address {
 	max-width: calc(100% - 215px);
     }
-    .footer-meta {
-	text-align: right;
-    }
+    
+   
 }
